Fix header styles and mobile menu on tablet

--- a/src/components/Header/components/BurgerMenu/BurgerMenu.scss
+++ b/src/components/Header/components/BurgerMenu/BurgerMenu.scss
@@ -14,7 +14,7 @@
   justify-content: space-between;
   transition: ease 0.3s;
 
-  @include on-tablet {
+  @include on-big-tablet {
     display: none;
   }
 
